8188030: AWT java apps fail to start when some minimal fonts are present

Allow using CFF fonts as valid fonts when they are returned by fontconfig during font initialisation.

Reviewed-by: prr, serb