src/java.desktop/unix/native/common/awt/fontpath.c
@@ -1254,6 +1254,7 @@ Java_sun_font_FontConfigManager_getFontConfig
                 && (strcmp((char*)fontformat, "TrueType") != 0)
 #if defined(__linux__) || defined(_AIX)
                 && (strcmp((char*)fontformat, "Type 1") != 0)
+                && (strcmp((char*)fontformat, "CFF") != 0)
 #endif
              ) {
                 continue;
